fix tooltip in overlay block + alignment

--- a/src/app/preview/overlays/overlays.component.css
+++ b/src/app/preview/overlays/overlays.component.css
@@ -25,6 +25,14 @@
     width: 250px;
 }
 
+#tooltip-block  {
+    position: relative;
+}
+
+#tooltip-block::ng-deep  .dx-tooltip-wrapper {
+    position: initial !important;
+}
+
 #loadpanel-block {
     width: 240px;
 }
